--- a/RepoStreak/RepoStreak.entitlements
+++ b/RepoStreak/RepoStreak.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.admi126n.RepoStreak</string>
+		<string>group.com.admi126n.dev.RepoStreak</string>
 	</array>
 </dict>
 </plist>
